# tuying-ai

./: .env.development  .env.example  .env.production  .env.test  .gitattributes  .gitignore  README.md  package-lock.json  package.json  tsconfig.base.json  turbo.json
.github/workflows/: release.yml
apps/admin/: next.config.ts  package.json
apps/api/: package.json  tsconfig.json
apps/desktop/: .env.production.example  README.md  index.html  package.json  publish.config.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/worker/: package.json  tsconfig.json
docs/: ARCHITECTURE.md  PHASE-1.md  PHASE-10-TEMPLATES.md  PHASE-10.md  PHASE-11-UPDATE.md  PHASE-11.md  PHASE-12-DETAIL.md  PHASE-12.md  PHASE-13-DASHBOARD.md  PHASE-13.md  PHASE-14-PRODUCTION.md  PHASE-14.md  PHASE-15.md  PHASE-2.md  PHASE-3.md  PHASE-4.md  PHASE-5.md  PHASE-6-MODELS.md  PHASE-6.md  PHASE-7-ROUTER.md  PHASE-7.md  PHASE-8-BATCH.md  PHASE-8.md  PHASE-9-PAYMENT.md  PHASE-9.md  PRD-V1.md  SPRINT-17-ARCHITECTURE.md  SPRINT-18-RC.md  SPRINT-20-BETA.md  SPRINT-21-DISTRIBUTION.md  SPRINT-22-RELEASE.md  SPRINTS.md
download/update/: update.json  update.json.example  update.simple.json.example
env/: env.template
infra/docker/: Dockerfile.admin  Dockerfile.api  Dockerfile.worker  docker-compose.yml  (+1 more)
scripts/: backup-db.ps1  backup-db.sh  backup-rc.sh  healthcheck.ps1  healthcheck.sh  publish-desktop-release.ps1  restore-db.sh
(+223 files in other folders)
